--- a/MemoryManagement_Fields/MemoryManagement_Fields.csproj
+++ b/MemoryManagement_Fields/MemoryManagement_Fields.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StringvsStringBuilder.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
